<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="6dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/img_card"
            android:scaleType="fitCenter"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_card"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/name_card" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/iv_card"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="Card Type" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/iv_card"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="@string/desc_card" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>