<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMargin="@dimen/margin_medium"
            app:expandedTitleGravity="top|center_horizontal"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingTop="@dimen/margin_extra_small"
                android:paddingStart="@dimen/margin_small"
                android:paddingEnd="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_semi_medium">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_max="@dimen/collapsing_toolbar_max_width">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_card"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/margin_medium"
                            android:scaleType="fitCenter"
                            tools:src="@android:color/darker_gray" />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="4"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/margin_medium"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_activity_movie_details_company_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginEnd="@dimen/margin_small"
                                app:tint="@android:color/white"
                                app:srcCompat="@drawable/ic_play_arrow" />

                            <TextView
                                android:id="@+id/tv_info"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/card_type"
                                app:layout_constraintStart_toStartOf="parent"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/margin_medium"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_activity_movie_details_runtime_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginEnd="@dimen/margin_small"
                                app:tint="@android:color/white"
                                app:srcCompat="@drawable/ic_play_arrow" />

                            <TextView
                                android:id="@+id/tv_info2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/level"
                                app:layout_constraintStart_toStartOf="parent" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/margin_medium"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_activity_movie_details_year_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginEnd="@dimen/margin_small"
                                app:tint="@android:color/white"
                                app:srcCompat="@drawable/ic_play_arrow" />

                            <TextView
                                android:id="@+id/tv_info3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/atk"
                                app:layout_constraintStart_toStartOf="parent" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:paddingStart="0dp"
                            android:paddingEnd="@dimen/margin_medium"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_activity_movie_details_website_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginEnd="@dimen/margin_small"
                                app:tint="@android:color/white"
                                app:srcCompat="@drawable/ic_play_arrow" />

                            <TextView
                                android:id="@+id/tv_info4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/def"
                                app:layout_constraintStart_toStartOf="parent" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/details_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:background="@color/white"
                android:theme="@style/Theme.AppCompat.Light.NoActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    android:background="@color/dark_blue">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_arrow_back"
                        android:contentDescription="@string/btn_back"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/details_toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        tools:text="Detail Card" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        android:requiresFadingEdge="horizontal"
                        android:layout_marginBottom="8dp">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/genres_chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@string/name_card" />

                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_semi_medium"
                        android:layout_marginBottom="@dimen/margin_semi_medium"
                        android:background="?android:listDivider"/>

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="?android:textColorSecondary"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_share"
        app:layout_anchor="@id/app_bar"
        app:backgroundTint="@color/colorLightGray"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>